--- a/position/input form/styles.css
+++ b/position/input form/styles.css
@@ -15,6 +15,7 @@ h1 {
 .control {
     width: 100%;
     padding: 5px;
+    margin-top: 15px;
     box-sizing: border-box;
     border: 1px solid #dddddd;
 }
